--- a/cal/package.json
+++ b/cal/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm ../public/static && cp -r build ../public",
+    "build": "react-scripts build && rm ../public/static && cp -r build/* ../public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
