--- a/cal/package.json
+++ b/cal/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.30.0",
+    "@azure/msal-react": "^1.4.9",
     "antd": "^5.12.8",
     "bootstrap": "^5.3.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
